--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@ Assistant Professor, <a href="https://www.soken.ac.jp/en/index.html" target=&ldq
 <p>My research is structured across three levels:
 </p>
 <ul>
-<li><p><i>Theory</i>: OT theory for measures with graph structure, tree systems, functional geometric structure.
+<li><p>Theory: OT theory for measures with graph structure, tree systems, functional geometric structure.
 </p>
 </li>
-<li><p><i>Methodology</i>: scalability, robustness, and efficient of OT for learning with measures in machine learning and deep learning, e.g., generative models, diffusion models, data valuation for LLM pretraining.
+<li><p>Methodology: scalability, robustness, and efficient of OT for learning with measures in machine learning and deep learning, e.g., generative models, diffusion models, data valuation for LLM pretraining.
 </p>
 </li>
-<li><p><i>Application</i>: for domains with large-scale, complex structure data, including non-Euclidean, high-dimension, dynamic, nonlinearity, corruption.
+<li><p>Application: for domains with large-scale, complex structure data, including non-Euclidean, high-dimension, dynamic, nonlinearity, corruption.
 </p>
 </li>
 </ul>
@@ -124,17 +124,17 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </li>
 </ul>
 <h2>Vita</h2>
-<p>I received the Ph.D degree in 01/2016 from <a href="http://www.i.kyoto-u.ac.jp/en/" target=&ldquo;blank&rdquo;>Kyoto University, Japan</a>, supervised by <a href="http://marcocuturi.net/" target=&ldquo;blank&rdquo;><b>Marco</b> <b>Cuturi</b></a> and <a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/akihiro/index-e.html" target=&ldquo;blank&rdquo;><b>Akihiro</b> <b>Yamamoto</b></a>. I worked as a post-doctoral researcher at <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>Nagoya Institute of Technology</a> &amp; <a href="https://www.nims.go.jp/eng/" target=&ldquo;blank&rdquo;>National Institute for Materials Science, Japan</a>, mentored by <a href="https://www.mlds.mae.nagoya-u.ac.jp/takeuchi/index.en.html" target=&ldquo;blank&rdquo;>Ichiro Takeuchi</a> between 02/2016 and 08/2017. I then worked as a post-doctoral researcher between 09/2017 and 07/2021, and as a research scientist between 08/2021 and 08/2022 at <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>, with <a href="https://groups.oist.jp/mlds/makoto-yamada" target=&ldquo;blank&rdquo;>Makoto Yamada</a>. From 09/2022, I have been working as an assistant professor at <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>The Institute of Statistical Mathematics (ISM)</a>. I have concurrently been a visiting scientist at <a href="https://www.riken.jp/en/research/labs/aip/index.html" target=&ldquo;blank&rdquo;>RIKEN AIP</a>, working in <a href="https://www.riken.jp/en/research/labs/aip/generic_tech/funct_anl_learn/" target=&ldquo;blank&rdquo;>Functional Analytic Learning Team</a> led by <a href="https://minh-ha-quang.github.io/" target=&ldquo;blank&rdquo;>Minh Ha Quang</a> from 12/2022. 
+<p>I received my Ph.D. in 01/2016 from <a href="http://www.i.kyoto-u.ac.jp/en/" target=&ldquo;blank&rdquo;>Kyoto University, Japan</a>, supervised by <a href="http://marcocuturi.net/" target=&ldquo;blank&rdquo;><b>Marco</b> <b>Cuturi</b></a> and advised by <a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/akihiro/index-e.html" target=&ldquo;blank&rdquo;><b>Akihiro</b> <b>Yamamoto</b></a>. I worked as a post-doctoral researcher at <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>Nagoya Institute of Technology</a> &amp; <a href="https://www.nims.go.jp/eng/" target=&ldquo;blank&rdquo;>National Institute for Materials Science, Japan</a>, between 02/2016 and 08/2017. Then, I worked at <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a> between 09/2017 and 07/2021 as a post-doctoral researcher; and between 08/2021 and 08/2022 as a research scientist. I have joined <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>The Institute of Statistical Mathematics (ISM)</a> in 09/2022, as an assistant professor. I concurrently joined <a href="https://www.riken.jp/en/research/labs/aip/index.html" target=&ldquo;blank&rdquo;>RIKEN AIP</a> in 12/2022 as a visiting scientist, working in <a href="https://www.riken.jp/en/research/labs/aip/generic_tech/funct_anl_learn/" target=&ldquo;blank&rdquo;>Functional Analytic Learning Team</a> led by <a href="https://minh-ha-quang.github.io/" target=&ldquo;blank&rdquo;>Minh Ha Quang</a>. 
 </p>
 <h2>Selected Service</h2>
 <ul>
 <li><p>Area chair: ICML, ICLR, AISTATS
 </p>
 </li>
-<li><p>Program committee: NeurIPS
+<li><p>Editor board reviewer: JMLR
 </p>
 </li>
-<li><p>Reviewer: JMLR
+<li><p>Program committee: NeurIPS
 </p>
 </li>
 </ul>
@@ -142,7 +142,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-06-10 17:34:39 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-06-10 18:26:10 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
