--- a/publication.html
+++ b/publication.html
@@ -284,111 +284,101 @@ PhD thesis, Kyoto University, Japan, 2015.
 </p>
 </li>
 </ul>
-<h2>Workshop Posters / Talks</h2>
-<p><b>Workshop Posters</b>
-</p>
+<h2>Invited Talks</h2>
 <ul>
-<li><p>2024, <a href="https://www.dropbox.com/scl/fi/rs654fd09m5aj1umry8k4/TamLe_2024_Posters_ISM-Open-House.pdf?rlkey=msv8nosjc8nfg38zasuapu46c&amp;dl=0" target=&ldquo;blank&rdquo;><font color="blue">Optimal Transport for Measures with Noisy Tree Metric</font></a>, ISM Open House, Japan.
+<li><p>2025, Foundations and Frontiers: Interdisciplinary Perspectives on Mathematical Optimization workshop, RIKEN AIP, Japan.
+
 </p>
 </li>
-<li><p>2024, <font color="blue">Scalable Robust Optimal Transport for Measures with Noisy Tree Metric</font>, <a href="https://sites.google.com/view/dl2024/" target=&ldquo;blank&rdquo;>Deep Learning: Theory, Applications, and Implications workshop</a>, Japan.
+<li><p>2024, Statistical Mathematics Seminar Series, Virtual. [<a href="https://www.dropbox.com/scl/fi/eje8t6afomil7uo4olvap/TamLe_2024_SMSS_40min.pdf?rlkey=f1rm43a447whqx239p18uff50&amp;dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]
+
 </p>
 </li>
-<li><p>2023, <a href="https://openreview.net/pdf?id=Puw2kj7Wc7" target=&ldquo;blank&rdquo;><font color="blue">Optimal Transport for Measures with Noisy Tree Metric</font></a>, <a href="https://otmlworkshop.github.io/" target=&ldquo;blank&rdquo;>NeurIPS workshop: Optimal Transport and Machine Learning (OTML)</a>, US.
+<li><p>2024, Data Science Seminar (<a href="https://data-descriptive-science.org/en/" target=&ldquo;blank&rdquo;>Data Descriptive Science</a>), Kyoto, Japan (hybrid).
+
 </p>
 </li>
-<li><p>2023, <a href="https://www.dropbox.com/scl/fi/7m1exga71quydzjv9xtuk/TamLe_2023_Posters_ISM-Open-House.pdf?rlkey=mtvwyfl6ltootzvod43acgxr7&amp;dl=0" target=&ldquo;blank&rdquo;><font color="blue">Optimal Transport for Measures on a Graph</font></a>, ISM Open House, Virtual.
+<li><p>2024, <a href="https://ims.nus.edu.sg/events/the-mathematics-of-data/" target=&ldquo;blank&rdquo;>The Mathematics of Data program &ndash; Workshop on Optimal Transport and PDEs</a>, IMS, NUS, Singapore. [<a href="https://www.dropbox.com/scl/fi/r5weqj7u1ue01nykzrljx/TamLe_IMS2024_The-Mathematics-of-Data.pdf?rlkey=utlujdbteoojzivxbnfwxcono&amp;dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]
+
 </p>
 </li>
-<li><p>2022, <font color="blue">Sobolev Transport: A Scalable Metric for Probability Measures with Graph Metrics</font>, <a href="https://roisxtalk2022.rois.jp/english" target=&ldquo;blank&rdquo;>ROIS Crosstalk</a>, Virtual. 
+<li><p>2023, Data Science Seminar (<a href="https://data-descriptive-science.org/en/" target=&ldquo;blank&rdquo;>Data Descriptive Science</a>), Tokyo, Japan. [<a href="https://www.dropbox.com/scl/fi/5sgdtnm2zcul63gjwd9ks/TamLe_2023Aug_TransformativeA_DS_25min.pdf?rlkey=8y9ececp48mqokp0kzwkw8b2s&amp;dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]
+
 </p>
 </li>
-<li><p>Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi, <font color="blue">Safe Grid Search with Optimal Complexity</font>. <a href="https://miaoxu-ml.github.io/aip_workshop.html" target=&ldquo;blank&rdquo;>The ACML&rsquo;2019 RIKEN AIP Workshop</a>, Japan, 2019.
+<li><p>2023, Statistical Mathematics Seminar Series, Virtual. [<a href="https://www.dropbox.com/scl/fi/rvow9d86fywadaopjde61/TamLe_2023July_ISM-Seminar_40min.pdf?rlkey=7sns0m321yg9u1cfgukxvu58w&amp;dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]
+
 </p>
 </li>
-<li><p>2019, <font color="blue">Tree-Sliced Approximation of Wasserstein Distances</font>, <a href="http://aisociety.kr/KJMLW2019/" target=&ldquo;blank&rdquo;>Korea-Japan Machine Learning workshop</a>, Korea. [<a href="https://www.dropbox.com/s/pym938fkamamgyo/TLMYKFMC_KJworkshop19_Tree-SlicedWasserstein.pdf?dl=0" target=&ldquo;blank&rdquo;>Poster</a>]
+<li><p>2023, CREST Seminar: <a href="https://www.jst.go.jp/kisoken/crest/en/project/1111105/1111105_2020.html" target=&ldquo;blank&rdquo;>Innovation of Deep Structured Models with Representation of Mathematical Intelligence</a>, Virtual. [<a href="https://www.dropbox.com/s/tzlgimrh1j3dv6a/TamLe_2023Jan_CREST%20Seminar.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]
+
 </p>
 </li>
-<li><p>2019, <font color="blue">Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams</font>, <a href="http://aisociety.kr/KJMLW2019/" target=&ldquo;blank&rdquo;>Korea-Japan Machine Learning workshop</a>, Korea.
+<li><p>2022, Statistical Mathematics Seminar Series, Virtual. [<a href="https://www.dropbox.com/s/hymi91etc7crl5e/TamLe_2022Nov_ISM%20Seminar_40min.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]
+
 </p>
 </li>
-<li><p>2018, <a href="https://www.dropbox.com/s/r6mabb120909khd/gimli_icml18_v04.pdf?dl=0" target=&ldquo;blank&rdquo;><font color="blue">Persistence Fisher Kernel: A Riemannian Manifold Kernel for Persistence Diagrams</font></a>, <a href="http://gimli.cc/2018/" target=&ldquo;blank&rdquo;>ICML workshop: Geometry in Machine Learning</a>, Sweden.
+<li><p>2022, Optimal Transport Seminar (<a href="https://data-descriptive-science.org/en/" target=&ldquo;blank&rdquo;>Data Descriptive Science</a>), Virtual. 
+
 </p>
 </li>
-<li><p>2018, <font color="blue">Riemannian Manifold Kernel for Persistence Diagrams</font>, <a href="https://sites.google.com/view/aip-fau-mlgt-2018/home" target=&ldquo;blank&rdquo;>Transatlantic and Transpacific Workshop on Machine Learning and Discrete Optimization</a>, US. 
+<li><p>2022, Kyoto Machine Learning workshop, Kyoto University, Japan (hybrid).
+
 </p>
 </li>
-<li><p>Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi, <a href="http://smai-mode2018.imag.fr/resumes/resumesLong/subm26.pdf" target=&ldquo;blank&rdquo;><font color="blue">Optimal Approximation for regularization and validation path</font></a>. <a href="http://smai-mode2018.imag.fr" target=&ldquo;blank&rdquo;>Journees SMAI MODE</a>, France, 2018.
+<li><p>2022, <a href="https://sites.google.com/kyoto-u.ac.jp/apatg" target=&ldquo;blank&rdquo;>Asia Pacific Seminar on Applied Topology and Geometry (APATG)</a>, Virtual. [<a href="https://www.dropbox.com/s/hd8c61gui6n55py/TamLe_APATG2022_Slide.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]
+
 </p>
 </li>
-<li><p>Eugene Ndiaye, <b>Tam Le</b>, Olivier Fercoq, Joseph Salmon, Ichiro Takeuchi, <font color="blue">GridSearch: Complexite et Garantie pour la Validation (GridSearch: Complexity and Guarantee for Validation)</font>. <a href="http://cap2018.litislab.fr/Programme-en.html" target=&ldquo;blank&rdquo;>Conference Sur L'Apprentissage Automatique (CAp)</a>, France, 2018.
+<li><p>2022, <i>AAAI workshop</i> - <a href="https://ot-sdm.github.io/" target=&ldquo;blank&rdquo;>OT-SDM: International Workshop on Optimal Transport and Structured Data Modeling</a>, Virtual. [<a href="https://www.dropbox.com/s/4l37iw738ivtn0h/TamLe_AAAI22%20Workshop_OTSDM.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]
+
+</p>
+</li>
+<li><p>2021, <a href="https://www.vinai.io/neuripsworkshop2021" target=&ldquo;blank&rdquo;>VinAI workshop</a>, Virtual. [<a href="https://www.dropbox.com/s/mjovcgfeyogrb30/TamLe_VinAIWorkshopp2021_Adversarial%20Regrerssion.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]
+
+</p>
+</li>
+<li><p>2021, RIKEN AIP Open Seminar Series, Virtual. [<a href="https://www.dropbox.com/s/6tpdgjy7nqp93gq/TamLe_TW_RIKEN%20Open%20Seminar_FINAL_2021.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]
+
+</p>
+</li>
+<li><p>2019, Institute for Advanced Study, Kyoto University, Japan. [<a href="https://www.dropbox.com/s/gejiyhbjfcpfk4t/2019July_TDA_GeometricKernel.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]
+
+</p>
+</li>
+<li><p>2016, <a href="http://www.nims.go.jp/MII-I/event/h6g4rf000000034y-att/h6g4rf000000036n.pdf" target=&ldquo;blank&rdquo;>MI2I Open Seminar Series</a>, National Institute for Materials Science, Tsukuba, Japan. [<a href="https://www.dropbox.com/s/o6nrtzh39si8u7p/TamLe_NIMS_June2016.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]
+
+</p>
+</li>
+<li><p>2015, Nagoya Institute of Technology, Japan. 
+
+</p>
+</li>
+<li><p>2015, Bioinformatics Center, Institute for Chemical Research, Kyoto University, Japan. 
+
+</p>
+</li>
+<li><p>2015, IST Seminar, Graduate School of Informatics, Kyoto University, Japan. [<a href="https://www.dropbox.com/s/w4cjpjcl3c1e0hd/TamLe_IST_KYOTO_15May29.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]
+
+</p>
+</li>
+<li><p>2014, Lear, INRIA Rhone Alpes, Grenoble, France. [<a href="https://www.dropbox.com/s/ub8ctmh3a0ksk4l/TamLe_LearINRIA14Feb07.pdf" target=&ldquo;blank&rdquo;>SLIDE</a>]
 </p>
 </li>
 </ul>
-<p><b>Invited Talks</b>
+<p><b>Upcoming Invited Talks</b>
 </p>
 <ul>
-<li><p>2024, <font color="blue">Recent Results on Optimal Transport and Its Applications</font>, Statistical Mathematics Seminar Series, Virtual. [<a href="https://www.dropbox.com/scl/fi/eje8t6afomil7uo4olvap/TamLe_2024_SMSS_40min.pdf?rlkey=f1rm43a447whqx239p18uff50&amp;dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]
+<li><p>06/2025, Statistical Mathematics Seminar Series, Virtual.
 </p>
 </li>
-<li><p>2024, <font color="blue">Scalable Robust Optimal Transport for Measures with Noisy Tree Metric </font>, Data Science Seminar (<a href="https://data-descriptive-science.org/en/" target=&ldquo;blank&rdquo;>Data Descriptive Science</a>), Kyoto, Japan (hybrid).
-</p>
-</li>
-<li><p>2024, <font color="blue">Local Structures for Large-Scale Optimal Transport</font>, <a href="https://ims.nus.edu.sg/events/the-mathematics-of-data/" target=&ldquo;blank&rdquo;>The Mathematics of Data program &ndash; Workshop on Optimal Transport and PDEs</a>, IMS, NUS, Singapore. [<a href="https://www.dropbox.com/scl/fi/r5weqj7u1ue01nykzrljx/TamLe_IMS2024_The-Mathematics-of-Data.pdf?rlkey=utlujdbteoojzivxbnfwxcono&amp;dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]
-</p>
-</li>
-<li><p>2023, <font color="blue">Sobolev Transport</font>, Data Science Seminar (<a href="https://data-descriptive-science.org/en/" target=&ldquo;blank&rdquo;>Data Descriptive Science</a>), Tokyo, Japan. [<a href="https://www.dropbox.com/scl/fi/5sgdtnm2zcul63gjwd9ks/TamLe_2023Aug_TransformativeA_DS_25min.pdf?rlkey=8y9ececp48mqokp0kzwkw8b2s&amp;dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]
-</p>
-</li>
-<li><p>2023, <font color="blue">Optimal transport for measures on a graph</font>, Statistical Mathematics Seminar Series, Virtual. [<a href="https://www.dropbox.com/scl/fi/rvow9d86fywadaopjde61/TamLe_2023July_ISM-Seminar_40min.pdf?rlkey=7sns0m321yg9u1cfgukxvu58w&amp;dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]
-</p>
-</li>
-<li><p>2023, <font color="blue">Optimal Transport with Local Structures for Large-Scale Applications</font>, CREST Seminar: <a href="https://www.jst.go.jp/kisoken/crest/en/project/1111105/1111105_2020.html" target=&ldquo;blank&rdquo;>Innovation of Deep Structured Models with Representation of Mathematical Intelligence</a>, Virtual. [<a href="https://www.dropbox.com/s/tzlgimrh1j3dv6a/TamLe_2023Jan_CREST%20Seminar.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]
-</p>
-</li>
-<li><p>2022, <font color="blue">Optimal Transport and Its Applications on Machine Learning</font>, Statistical Mathematics Seminar Series, Virtual. [<a href="https://www.dropbox.com/s/hymi91etc7crl5e/TamLe_2022Nov_ISM%20Seminar_40min.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]
-</p>
-</li>
-<li><p>2022, <font color="blue">Optimal Transport and Its Applications on Machine Learning</font>, Optimal Transport Seminar (<a href="https://data-descriptive-science.org/en/" target=&ldquo;blank&rdquo;>Data Descriptive Science</a>), Virtual. 
-</p>
-</li>
-<li><p>2022, <font color="blue">Sobolev Transport: A Scalable Metric for Probability Measures on Graphs</font>, Kyoto Machine Learning workshop, Kyoto University, Japan (hybrid).
-</p>
-</li>
-<li><p>2022, <font color="blue">Geometric Approaches for Persistence Diagrams in Topological Data Analysis</font>, <a href="https://sites.google.com/kyoto-u.ac.jp/apatg" target=&ldquo;blank&rdquo;>Asia Pacific Seminar on Applied Topology and Geometry (APATG)</a>, Virtual. [<a href="https://www.dropbox.com/s/hd8c61gui6n55py/TamLe_APATG2022_Slide.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]
-</p>
-</li>
-<li><p>2022, <font color="blue">On Scalability of Optimal Transport with Tree/Graph metric</font>, AAAI workshop (<a href="https://ot-sdm.github.io/" target=&ldquo;blank&rdquo;>OT-SDM: International Workshop on Optimal Transport and Structured Data Modeling</a>), Virtual. [<a href="https://www.dropbox.com/s/4l37iw738ivtn0h/TamLe_AAAI22%20Workshop_OTSDM.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]
-</p>
-</li>
-<li><p>2021, <font color="blue">Adversarial Regression with Doubly Non-negative Weighting Matrices</font>, <a href="https://www.vinai.io/neuripsworkshop2021" target=&ldquo;blank&rdquo;>VinAI workshop</a>, Virtual. [<a href="https://www.dropbox.com/s/mjovcgfeyogrb30/TamLe_VinAIWorkshopp2021_Adversarial%20Regrerssion.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]
-</p>
-</li>
-<li><p>2021, <font color="blue">An Introduction on Tree-(Sliced)-Wasserstein Geometry</font>, RIKEN AIP Open Seminar Series, Virtual. [<a href="https://www.dropbox.com/s/6tpdgjy7nqp93gq/TamLe_TW_RIKEN%20Open%20Seminar_FINAL_2021.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]
-</p>
-</li>
-<li><p>2019, <font color="blue">Kernel methods for Persistence Diagrams: A Geometric Approach</font>, Institute for Advanced Study, Kyoto University, Japan. [<a href="https://www.dropbox.com/s/gejiyhbjfcpfk4t/2019July_TDA_GeometricKernel.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]
-</p>
-</li>
-<li><p>2016, <font color="blue">Geometry-Aware Metric Learning for Histograms</font>, <a href="http://www.nims.go.jp/MII-I/event/h6g4rf000000034y-att/h6g4rf000000036n.pdf" target=&ldquo;blank&rdquo;>MI2I Open Seminar Series</a>, National Institute for Materials Science, Tsukuba, Japan. [<a href="https://www.dropbox.com/s/o6nrtzh39si8u7p/TamLe_NIMS_June2016.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]
-</p>
-</li>
-<li><p>2015, <font color="blue">Metric Learning for Histograms</font>, Nagoya Institute of Technology, Japan. 
-</p>
-</li>
-<li><p>2015, <font color="blue">Unsupervised Riemannian Metric Learning for Histograms</font>, Bioinformatics Center, Institute for Chemical Research, Kyoto University, Japan. 
-</p>
-</li>
-<li><p>2015, <font color="blue">Unsupervised Riemannian Metric Learning for Histograms Using Aitchison Embeddings</font>, IST Seminar, Graduate School of Informatics, Kyoto University, Japan. [<a href="https://www.dropbox.com/s/w4cjpjcl3c1e0hd/TamLe_IST_KYOTO_15May29.pdf?dl=0" target=&ldquo;blank&rdquo;>SLIDE</a>]
-</p>
-</li>
-<li><p>2014, <font color="blue">Adaptive Euclidean Maps for Histograms: Generalized Aitchison Embeddings</font>, Lear, INRIA Rhone Alpes, Grenoble, France. [<a href="https://www.dropbox.com/s/ub8ctmh3a0ksk4l/TamLe_LearINRIA14Feb07.pdf" target=&ldquo;blank&rdquo;>SLIDE</a>]
+<li><p>09/2025, Workshop on Optimization and Machine Learning for Data Science and Future Computing, Japan.
 </p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-06-10 17:34:39 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-06-10 18:26:10 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
