--- a/professional.html
+++ b/professional.html
@@ -24,6 +24,14 @@
 <p><b> Selected ML Conferences / Journals</b>
 </p>
 <ul>
+<li><p>Journal of Machine Learning Research (<b>JMLR</b>)
+</p>
+<ul>
+<li><p><a href="https://www.jmlr.org/editorial-board.html" target=&ldquo;blank&rdquo;>Editorial board reviewer</a>
+
+</p>
+</li></ul>
+</li>
 <li><p>International Conference on Machine Learning (<b>ICML</b>)
 </p>
 <ul>
@@ -58,14 +66,6 @@
 </p>
 <ul>
 <li><p>Program committee: 2015, 2019-2025
-</p>
-</li></ul>
-</li>
-<li><p>Journal of Machine Learning Research (<b>JMLR</b>)
-</p>
-<ul>
-<li><p><a href="https://www.jmlr.org/editorial-board.html" target=&ldquo;blank&rdquo;>Editorial board of reviewer</a>
-
 </p>
 </li>
 </ul>
@@ -158,21 +158,8 @@
 </p>
 </li>
 <li><p>04/2023 - 03/2026, a collaborator in a research group led by <a href="https://sites.google.com/view/hinohide/" target=&ldquo;blank&rdquo;>Hideitsu Hino</a> (ISM), Mitsui Knowledge Industry Co., Ltd. grant. 
-</p>
-</li>
-<li><p>04/2024 - 03/2025, ISM Joint-research 2024-ISMCRP-2021 as PI.
-</p>
-</li>
-<li><p>04/2023 - 03/2024, ISM Joint-research 2023-ISMCRP-2010 as PI.
-</p>
-</li>
-</ul>
-<h2>Visitors / ISM Joint-Research</h2>
-<ul>
-<li><p><a href="https://cscarv.github.io/" target=&ldquo;blank&rdquo;>Christopher Scarvelis</a> (MIT CSAIL): <a href="https://www.jsps.go.jp/english/e-fellow/e-oubei-s/index.html" target=&ldquo;blank&rdquo;>JSPS Postdoctoral Fellowships for Research in Japan, Short-Term Program</a> (March, 2023 - April, 2023).
-</p>
-</li>
-<li><p><a href="https://thongpham.net/" target=&ldquo;blank&rdquo;>Thong Pham</a> (Shiga University): <a href="https://www.ism.ac.jp/kyodo/index_j.html" target=&ldquo;blank&rdquo;>ISM Joint-research</a> (FY2023&ndash;FY2024).
+
+
 </p>
 </li>
 </ul>
@@ -216,88 +203,9 @@
 </p>
 </li>
 </ul>
-<h2>Misc</h2>
-<p><b>Summer Schools</b>
-</p>
-<ul>
-<li><p><a href="http://www.iip.ist.i.kyoto-u.ac.jp/mlss15/doku.php" target=&ldquo;blank&rdquo;>Machine Learning Summer School, Kyoto, Japan, 2015</a>.
-</p>
-</li>
-<li><p><a href="http://www.iip.ist.i.kyoto-u.ac.jp/mlss12/doku.php" target=&ldquo;blank&rdquo;>Machine Learning Summer School (MLSS series), Kyoto, Japan, 2012</a>.
-</p>
-</li>
-<li><p><a href="http://mlss2011.comp.nus.edu.sg/" target=&ldquo;blank&rdquo;>Machine Learning Summer School (MLSS series), Singapore, 2011</a>.
-</p>
-</li>
-</ul>
-<p><b>Conferences</b>
-</p>
-<ul>
-<li><p>International Conference on Machine Learning (<b>ICML</b>): 2015, 2018-2024.
-</p>
-</li>
-<li><p>Neural Information Processing Systems (<b>NeurIPS/NIPS</b>): 2014, 2017-2024.
-</p>
-</li>
-<li><p>International Conference on Learning Representations (<b>ICLR</b>): 2020-2022, 2025.
-</p>
-</li>
-<li><p>International Conference on Artificial Intelligence and Statistics (<b>AISTATS</b>): 2019-2024.
-</p>
-</li>
-<li><p>Conference on Learning Theory (COLT): 2018, 2020-2021.
-</p>
-</li>
-<li><p>Symposium on Theory of Computing (STOC): 2021.
-</p>
-</li>
-<li><p>Computer Vision and Pattern Recognition (CVPR): 2021.
-</p>
-</li>
-<li><p>Association for Computational Linguistics (ACL): 2020.
-</p>
-</li>
-<li><p>ACM Conference on Fairness, Accountability, and Transparency (FAccT): 2021.
-</p>
-</li>
-</ul>
-<p><b>Internships</b>
-</p>
-<ul>
-<li><p>01/2014 - 02/2014, Internship student, <a href="http://lear.inrialpes.fr/" target=&ldquo;blank&rdquo;>Lear, INRIA, Grenoble, France</a>.
-</p>
-<ul>
-<li><p>Supervisor: <a href="http://faculty.washington.edu/zaid/" target=&ldquo;blank&rdquo;>Professor Zaid Harchaoui</a>.
-</p>
-</li></ul>
-</li>
-<li><p>03/2013, Internship student at <a href="http://lear.inrialpes.fr/" target=&ldquo;blank&rdquo;>Lear, INRIA, Grenoble, France</a>.
-</p>
-<ul>
-<li><p>Supervisor: <a href="http://faculty.washington.edu/zaid/" target=&ldquo;blank&rdquo;>Professor Zaid Harchaoui</a>.
-</p>
-</li></ul>
-</li>
-<li><p>08/2010 - 02/2011, Internship student, <a href="http://www.nii.ac.jp/en/" target=&ldquo;blank&rdquo;>National Institute of Informatics, Tokyo, Japan</a>.
-</p>
-<ul>
-<li><p>Supervisor: <a href="http://research.nii.ac.jp/~sugimoto/" target=&ldquo;blank&rdquo;>Professor Akihiro Sugimoto</a>
-</p>
-</li></ul>
-</li>
-<li><p>04/2009 - 06/2009, Internship student, <a href="http://www.toyota-ti.ac.jp/" target=&ldquo;blank&rdquo;>Toyota Technological Institute of Nagoya, Japan</a>.
-</p>
-<ul>
-<li><p>Supervisor: <a href="http://www.ttic.edu/mita.php" target=&ldquo;blank&rdquo;>Professor Seiichi Mita</a>
-</p>
-</li>
-</ul>
-
-</li>
-</ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-06-10 17:34:39 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-06-10 18:26:10 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
