--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Assistant Professor, <a href="https://www.soken.ac.jp/en/index.html" target=&ldq
 </p>
 </li>
 </ul>
-<p>Also, I actively expand the research spectrum to interesting and impactful (related) research problems.
+<p>I also actively expand the research spectrum to interesting and impactful (related) research problems.
 </p>
 <h2>Contact</h2>
 <div class="infoblock">
@@ -142,7 +142,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-06-11 08:39:15 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-06-11 08:56:12 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
