--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </li>
 </ul>
 <h2>Vita</h2>
-<p>I received my Ph.D. in 01/2016 from <a href="http://www.i.kyoto-u.ac.jp/en/" target=&ldquo;blank&rdquo;>Kyoto University, Japan</a>, supervised by <a href="http://marcocuturi.net/" target=&ldquo;blank&rdquo;><b>Marco</b> <b>Cuturi</b></a> and advised by <a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/akihiro/index-e.html" target=&ldquo;blank&rdquo;><b>Akihiro</b> <b>Yamamoto</b></a>. I worked as a post-doctoral researcher at <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>NITECH</a> &amp; <a href="https://www.nims.go.jp/eng/" target=&ldquo;blank&rdquo;>NIMS, Japan</a>, between 02/2016 and 08/2017. Then, I worked at <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN AIP</a> between 09/2017 and 07/2021 as a post-doctoral researcher; and between 08/2021 and 08/2022 as a research scientist. I have joined <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>ISM</a> in 09/2022, as an assistant professor. I concurrently joined <a href="https://www.riken.jp/en/research/labs/aip/index.html" target=&ldquo;blank&rdquo;>RIKEN AIP</a> in 12/2022 as a visiting scientist.
+<p>I received my Ph.D. in 01/2016 from <a href="http://www.i.kyoto-u.ac.jp/en/" target=&ldquo;blank&rdquo;>Kyoto University, Japan</a>, supervised by <a href="http://marcocuturi.net/" target=&ldquo;blank&rdquo;><b>Marco</b> <b>Cuturi</b></a> and advised by <a href="http://www.iip.ist.i.kyoto-u.ac.jp/member/akihiro/index-e.html" target=&ldquo;blank&rdquo;><b>Akihiro</b> <b>Yamamoto</b></a>. I worked as a post-doctoral researcher at <a href="http://www-als.ics.nitech.ac.jp/~takeuchi/" target=&ldquo;blank&rdquo;>NITECH</a> &amp; <a href="https://www.nims.go.jp/eng/" target=&ldquo;blank&rdquo;>NIMS, Japan</a>, between 02/2016 and 08/2017. Then, I worked at <a href="http://www.riken.jp/en/research/labs/aip/" target=&ldquo;blank&rdquo;>RIKEN AIP</a> between 09/2017 and 07/2021 as a post-doctoral researcher; and between 08/2021 and 08/2022 as a research scientist. I have joined <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>ISM</a> in 09/2022, as an assistant professor. I concurrently joined <a href="https://www.riken.jp/en/research/labs/aip/index.html" target=&ldquo;blank&rdquo;>RIKEN AIP</a> in 12/2022 as a visiting scientist, working in Functional Analytic Learning team led by Minh Ha Quang.
 </p>
 <h2>Selected Service</h2>
 <ul>
@@ -142,7 +142,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-06-11 08:56:12 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-06-14 09:03:53 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
