--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@ Assistant Professor, <a href="https://www.soken.ac.jp/en/index.html" target=&ldq
 <p>My research aims to improve scalability, efficiency, and robustness for learning with large-scale, complex data and models from optimal transport (OT) theory perspective, focusing on two following objectives:
 </p>
 <ul>
-<li><p>(i) <i>Deepening OT theory</i>: break the curse of dimensionality for OT with 1D-structure; and going beyond Lp structure for variational Wasserstein problems.
+<li><p>(i) Deepening OT theory: break the curse of dimensionality for OT with 1D-structure; and going beyond Lp structure for variational Wasserstein problems.
 </p>
 </li>
-<li><p>(ii) <i>Leveraging OT theoretical insights for data science</i>: designing innovative efficient methodologies; and improving efficiency, scalability, and robustness for applications with large-scale, complex data.
+<li><p>(ii) Leveraging OT theoretical insights for data science: designing innovative efficient methodologies; and improving efficiency, scalability, and robustness for applications with large-scale, complex data.
 </p>
 </li>
 </ul>
@@ -57,7 +57,7 @@ Assistant Professor, <a href="https://www.soken.ac.jp/en/index.html" target=&ldq
 </p>
 </li>
 </ul>
-<p>I also actively expand the research spectrum to interesting and impactful (related) research problems.
+<p>I also actively expand the research to interesting and impactful (related) problems.
 </p>
 <h2>Contact</h2>
 <div class="infoblock">
@@ -114,12 +114,8 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 
 
 
-</p>
-</li>
-<li><p>01-Dec-2022, I am officially appointed as a visiting scientist at <a href="https://www.riken.jp/en/research/labs/aip/generic_tech/funct_anl_learn/" target=&ldquo;blank&rdquo;>Functional Analytic Learning Unit</a>, <a href="https://www.riken.jp/en/research/labs/aip/index.html" target=&ldquo;blank&rdquo;>RIKEN Center for Advanced Intelligence Project (RIKEN AIP)</a>.
-</p>
-</li>
-<li><p>01-Sep-2022, I officially join in <a href="https://www.ism.ac.jp/index_e.html" target=&ldquo;blank&rdquo;>The Institute of Statistical Mathematics (ISM)</a> as Assistant Professor. I am also an Assistant Professor at <a href="https://www.soken.ac.jp/en/index.html" target=&ldquo;blank&rdquo;>The Graduate School for Advanced Studies (SOKENDAI)</a>.
+
+
 </p>
 </li>
 </ul>
@@ -142,7 +138,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-06-20 11:49:22 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-06-22 17:25:14 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
