--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@ Assistant Professor, <a href="https://www.soken.ac.jp/en/index.html" target=&ldq
 <p>My research aims to improve scalability, efficiency, and robustness for learning with large-scale, complex data and models from optimal transport (OT) theory perspective, focusing on two following objectives:
 </p>
 <ul>
-<li><p>(i) Deepening OT theory: break the curse of dimensionality for OT with 1D-structure; and going beyond Lp structure for variational Wasserstein problems.
+<li><p>Deepening OT theory: break the curse of dimensionality for OT with 1D-structure; and going beyond Lp structure for variational Wasserstein problems.
 </p>
 </li>
-<li><p>(ii) Leveraging OT theoretical insights for data science: designing innovative efficient methodologies; and improving efficiency, scalability, and robustness for applications with large-scale, complex data.
+<li><p>Leveraging OT theoretical insights for data science: designing innovative efficient methodologies; and improving efficiency, scalability, and robustness for applications with large-scale, complex data.
 </p>
 </li>
 </ul>
@@ -138,7 +138,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-06-22 17:25:14 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-06-22 17:26:10 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
