--- a/publication.html
+++ b/publication.html
@@ -192,7 +192,7 @@ ArXiv, 2025. <br />
 </li>
 </ul>
 <ul>
-<li><p><a href="https://arxiv.org/pdf/2308.15005.pdf" target=&ldquo;blank&rdquo;><font color="blue">Few-Shot Object Detection via Synthetic Features with Optimal Transport</font></a> <br />
+<li><p><a href="https://www.sciencedirect.com/science/article/abs/pii/S1077314225000736" target=&ldquo;blank&rdquo;><font color="blue">Few-Shot Object Detection via Synthetic Features with Optimal Transport</font></a> <br />
 Computer Vision and Image Understanding (<b>CVIU</b>) journal, 2025. <br />
 Anh Khoa Nguyen Vu, Thanh-Toan Do, Vinh-Tiep Nguyen, <b>Tam Le</b>, Minh-Triet Tran, Tam V. Nguyen
 </p>
@@ -378,7 +378,7 @@ PhD thesis, Kyoto University, Japan, 2015.
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-06-24 18:14:59 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-06-24 23:51:59 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
