--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 </li></ul>
 </li>
-<li><p>25-Mar-2025, Our paper, entitled <a href="https://arxiv.org/pdf/2308.15005" target=&ldquo;blank&rdquo;>&ldquo;Few-Shot Object Detection via Synthetic Features with Optimal Transport&rdquo;</a> has been accepted to Computer Vision and Image Understanding (<b>CVIU</b>) journal! This is joint work with Khoa Nguyen, Toan Do, Tiep Nguyen, Triet Tran, and Tam V. Nguyen.
+<li><p>25-Mar-2025, Our paper, entitled <a href="https://www.sciencedirect.com/science/article/abs/pii/S1077314225000736" target=&ldquo;blank&rdquo;>&ldquo;Few-Shot Object Detection via Synthetic Features with Optimal Transport&rdquo;</a> has been accepted to <a href="https://www.sciencedirect.com/journal/computer-vision-and-image-understanding" target=&ldquo;blank&rdquo;>Computer Vision and Image Understanding (<b>CVIU</b>)</a> journal! This is joint work with Khoa Nguyen, Toan Do, Tiep Nguyen, Triet Tran, and Tam V. Nguyen.
 </p>
 </li>
 <li><p>23-Jan-2025, Our 3 papers have been accepted to <a href="https://iclr.cc/" target=&ldquo;blank&rdquo;><b>ICLR&rsquo;25</b></a>.
@@ -139,7 +139,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-06-24 18:14:59 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-06-24 23:51:59 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
