--- a/publication.html
+++ b/publication.html
@@ -286,6 +286,9 @@ PhD thesis, Kyoto University, Japan, 2015.
 </ul>
 <h2>Invited Talks</h2>
 <ul>
+<li><p>2025, Statistical Mathematics Seminar Series, Virtual.
+</p>
+</li>
 <li><p>2025, Foundations and Frontiers: Interdisciplinary Perspectives on Mathematical Optimization workshop, RIKEN AIP, Japan.
 
 </p>
@@ -369,16 +372,13 @@ PhD thesis, Kyoto University, Japan, 2015.
 <p><b>Upcoming Invited Talks</b>
 </p>
 <ul>
-<li><p>06/2025, Statistical Mathematics Seminar Series, Virtual.
-</p>
-</li>
 <li><p>09/2025, Workshop on Optimization and Machine Learning for Data Science and Future Computing, Japan.
 </p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-06-24 23:53:10 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-06-24 23:55:31 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
