--- a/index.html
+++ b/index.html
@@ -35,16 +35,32 @@ Assistant Professor, <a href="https://www.soken.ac.jp/en/index.html" target=&ldq
 </p>
 </td></tr></table>
 <h2>Research: Machine Learning, Optimal Transport <br /></h2>
-<p>My research aims to improve scalability, efficiency, and robustness for learning with large-scale, complex data and models from optimal transport (OT) theory perspective, focusing on two following objectives:
+<p>My research aims to improve scalability, efficiency, and robustness for learning with large-scale, complex data and models from optimal transport (OT) theory perspectives, with a focus on two main objectives:
 </p>
-<ul>
-<li><p>Deepening OT theory: break the curse of dimensionality for OT with projected 1D-structure; and going beyond Lp-structure for variational Wasserstein problems.
+<ol>
+<li><p>Deepening OT theory: 
+</p>
+<ol>
+<li><p>Breaking the curse of dimensionality for OT with projected 1D-structure.
 </p>
 </li>
-<li><p>Leveraging OT theoretical insights for data science: designing innovative efficient methodologies; and improving efficiency, scalability, and robustness for applications with large-scale, complex data.
+<li><p>Going beyond Lp-structure for variational Wasserstein problems.
+</p>
+</li></ol>
+</li>
+<li><p>Leveraging OT theoretical insights for data science: 
+</p>
+<ol>
+<li><p>Designing innovative efficient methodologies.
 </p>
 </li>
-</ul>
+<li><p>Improving efficiency, scalability, and robustness for applications with large-scale, complex data.
+</p>
+</li>
+</ol>
+
+</li>
+</ol>
 <h2>Contact</h2>
 <div class="infoblock">
 <div class="blockcontent">
@@ -124,7 +140,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-06-27 11:28:39 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-06-27 11:34:51 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
