--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Assistant Professor, <a href="https://www.soken.ac.jp/en/index.html" target=&ldq
 </p>
 </td></tr></table>
 <h2>Research: Machine Learning, Optimal Transport <br /></h2>
-<p>My research aims to improve scalability, efficiency, and robustness for learning with large-scale, complex data and models from optimal transport (OT) theory perspectives, with a focus on two main objectives:
+<p>My research aims to improve scalability, efficiency, and robustness for learning with large-scale, complex data and models from optimal transport (OT) theory perspectives, with a focus on two objectives:
 </p>
 <ol>
 <li><p>Deepening OT theory: 
@@ -51,10 +51,10 @@ Assistant Professor, <a href="https://www.soken.ac.jp/en/index.html" target=&ldq
 <li><p>Leveraging OT theoretical insights for data science: 
 </p>
 <ol>
-<li><p>Designing innovative efficient methodologies.
+<li><p>Designing innovative, and efficient methodologies.
 </p>
 </li>
-<li><p>Improving efficiency, scalability, and robustness for applications with large-scale, complex data including non-Euclidean, high-dimension, dynamic, nonlinearity, corruption.
+<li><p>Improving efficiency, scalability, and robustness for applications with large-scale, complex data.
 </p>
 </li>
 </ol>
@@ -140,7 +140,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-06-27 11:51:46 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-06-27 11:53:43 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
