--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Assistant Professor, <a href="https://www.soken.ac.jp/en/index.html" target=&ldq
 <li><p>Designing innovative, and efficient methodologies.
 </p>
 </li>
-<li><p>Improving efficiency, scalability, and robustness for applications with large-scale, complex data.
+<li><p>Centering on applications with large-scale, complex structured data.
 </p>
 </li>
 </ol>
@@ -140,7 +140,7 @@ Room: A506B. <a href="https://www.ism.ac.jp/access/index_e.html" target=&ldquo;b
 </p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2025-06-27 11:53:43 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2025-06-28 22:06:58 JST, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
